--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         /* font-family: 'Ubuntu', sans-serif;     */
         margin: 0px;
         padding: 0px;
-        background: url('img/bg2.jpg');
+        background: url('bg2.jpg');
     }
 
     .left {
