--- a/index.html
+++ b/index.html
@@ -34,10 +34,15 @@
 
     .mid {
         display: block;
-        width: 50%;
+        position: absolute;
+        left: 257px;
+        top: -10px;
+        width: 60%;
         margin: 20px auto;
+        background-color: yellow;
         /* display: inline-block; */
         border: 2px solid green;
+        border-radius: 30px;
     }
 
     .right {
